# MakeALM

./: .gitignore  Makefile  add.c  add.h  cpstd.c  cpstd.h  debug.h  main  main.c  test
app/: CMakeLists.txt
app/header/: debug.h
app/src/: add.c  cpstd.c  debug.c  main.c
phase1/app/src/: add.c  add.s  cpstd.c
phase2/app/: CMakeLists.txt
phase2/app/src/: add.c  cpstd.c
phase2/treatmentlib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
phase2/treatmentlib/include/header/: add.h
phase2/treatmentlib/src/: add.c  cpstd.c  debug.c  main.c
